--- a/ Notebooks/FkNwsDtctrEDA.ipynb
+++ b/ Notebooks/FkNwsDtctrEDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "4  It's primary day in New York and front-runners...  REAL  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "Name: title, Length: 6335, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "Name: text, Length: 6335, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "4  It's primary day in New York and front-runners...  REAL  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "4  it's primary day in new york and front-runners...  REAL  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "4  it's primary day in new york and front-runners...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,20 +630,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = RegexpTokenizer(r\"([a-zA-Z]+(?:’[a-z]+)?)\")\n",
+    "# tokenizer = RegexpTokenizer(r\"([a-zA-Z]+(?:’[a-z]+)?)\")\n",
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
     "\n",
     "title = X_train['title']\n",
     "\n",
-    "test_one = title.apply(word_tokenize)"
+    "# test_one = X_train['title'].apply(word_tokenize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1142    alabama sen. sessions backs trump’s immigratio...\n",
+       "2654    as of 6:00 am november 6th, trump is leading i...\n",
+       "5395    time: investigating hillary is an attack on al...\n",
+       "1170                women should vote with their husbands\n",
+       "4371    pakistan police detain dozens of imran khan's ...\n",
+       "                              ...                        \n",
+       "3772    the inane spectacle of the gop debate: cruz th...\n",
+       "5191    clinton, fbigate and the true depth of the oba...\n",
+       "5226    fearing election day trouble, some us schools ...\n",
+       "5390    obama gets away with some whoppers on guns at ...\n",
+       "860     ceta: canada has challenged the eu’s chemical ...\n",
+       "Name: title, Length: 5068, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +778,7 @@
        "4371  [pakistan, pakistan, 's, cricketer, turned, po...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,34 +789,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5068 entries, 1142 to 860\n",
+      "Data columns (total 2 columns):\n",
+      "title    5068 non-null object\n",
+      "text     5068 non-null object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 278.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/reuben/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/Users/reuben/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train['title'] = X_train.title.astype(str)\n",
+    "X_train['text'] = X_train.text.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/reuben/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/Users/reuben/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train[\"title\"] = X_train['title'].str.replace('[^\\w\\s]','')\n",
+    "X_train[\"text\"] = X_train['title'].str.replace('[^\\w\\s]', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1142</th>\n",
+       "      <td>alabama sen sessions backs trump  s immigratio...</td>\n",
+       "      <td>alabama sen sessions backs trump  s immigratio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2654</th>\n",
+       "      <td>as of 600 am november 6th  trump is leading in...</td>\n",
+       "      <td>as of 600 am november 6th  trump is leading in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5395</th>\n",
+       "      <td>time  investigating hillary is an attack on al...</td>\n",
+       "      <td>time  investigating hillary is an attack on al...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1170</th>\n",
+       "      <td>women should vote with their husbands</td>\n",
+       "      <td>women should vote with their husbands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4371</th>\n",
+       "      <td>pakistan police detain dozens of imran khan s ...</td>\n",
+       "      <td>pakistan police detain dozens of imran khan s ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3772</th>\n",
+       "      <td>the inane spectacle of the gop debate  cruz th...</td>\n",
+       "      <td>the inane spectacle of the gop debate  cruz th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5191</th>\n",
+       "      <td>clinton  fbigate and the true depth of the oba...</td>\n",
+       "      <td>clinton  fbigate and the true depth of the oba...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5226</th>\n",
+       "      <td>fearing election day trouble  some us schools ...</td>\n",
+       "      <td>fearing election day trouble  some us schools ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5390</th>\n",
+       "      <td>obama gets away with some whoppers on guns at ...</td>\n",
+       "      <td>obama gets away with some whoppers on guns at ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>ceta  canada has challenged the eu  s chemical...</td>\n",
+       "      <td>ceta  canada has challenged the eu  s chemical...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5068 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1142   NaN\n",
-       "2654   NaN\n",
-       "5395   NaN\n",
-       "1170   NaN\n",
-       "4371   NaN\n",
-       "        ..\n",
-       "3772   NaN\n",
-       "5191   NaN\n",
-       "5226   NaN\n",
-       "5390   NaN\n",
-       "860    NaN\n",
-       "Name: title, Length: 5068, dtype: float64"
+       "                                                  title  \\\n",
+       "1142  alabama sen sessions backs trump  s immigratio...   \n",
+       "2654  as of 600 am november 6th  trump is leading in...   \n",
+       "5395  time  investigating hillary is an attack on al...   \n",
+       "1170              women should vote with their husbands   \n",
+       "4371  pakistan police detain dozens of imran khan s ...   \n",
+       "...                                                 ...   \n",
+       "3772  the inane spectacle of the gop debate  cruz th...   \n",
+       "5191  clinton  fbigate and the true depth of the oba...   \n",
+       "5226  fearing election day trouble  some us schools ...   \n",
+       "5390  obama gets away with some whoppers on guns at ...   \n",
+       "860   ceta  canada has challenged the eu  s chemical...   \n",
+       "\n",
+       "                                                   text  \n",
+       "1142  alabama sen sessions backs trump  s immigratio...  \n",
+       "2654  as of 600 am november 6th  trump is leading in...  \n",
+       "5395  time  investigating hillary is an attack on al...  \n",
+       "1170              women should vote with their husbands  \n",
+       "4371  pakistan police detain dozens of imran khan s ...  \n",
+       "...                                                 ...  \n",
+       "3772  the inane spectacle of the gop debate  cruz th...  \n",
+       "5191  clinton  fbigate and the true depth of the oba...  \n",
+       "5226  fearing election day trouble  some us schools ...  \n",
+       "5390  obama gets away with some whoppers on guns at ...  \n",
+       "860   ceta  canada has challenged the eu  s chemical...  \n",
+       "\n",
+       "[5068 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_one = X_train['title'].str.replace('[^\\w\\s]','')"
+    "X_train"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'further', 'from', 'there', \"that'll\", 'why', 'between', 'was', 'because', 'any', 'should', 'needn', 'that', 'his', 'hadn', 'a', 'him', 'our', \"doesn't\", 'its', 'themselves', 'under', \"you're\", 'with', 'too', 'can', 'an', 'wasn', 'off', 'he', 'be', 'she', \"aren't\", 'we', \"hadn't\", 'you', 'below', 'mustn', 'up', 'yours', \"shan't\", 'out', 'where', 'does', 'above', 'some', 'own', \"she's\", 'at', 'no', 'on', 'ma', 'into', 'll', 'down', 'did', 'more', 'herself', 'such', 'i', 'aren', 'himself', 'them', 'doing', \"shouldn't\", 'during', 'my', 'am', 'isn', 'then', \"wasn't\", 'few', 'not', 'what', 'me', 'have', 'doesn', 'all', 'if', 'yourself', 'each', \"don't\", 'once', 'theirs', 'same', 'itself', 'wouldn', 'so', 'over', \"weren't\", 'ain', 'to', 'yourselves', \"won't\", 'here', \"isn't\", 'hers', \"you've\", \"mightn't\", 'were', 'm', 'is', 'and', 'been', 'before', 'only', 'haven', 'they', 'y', 'but', \"should've\", 'against', \"hasn't\", \"didn't\", 'being', \"needn't\", \"wouldn't\", 'weren', 'those', 'or', 'which', 'of', \"you'd\", 'again', 'in', 'ourselves', 'couldn', 'ours', 'just', 'your', 'both', 'shouldn', 'while', 'as', 'shan', 'will', 'nor', 'her', 'don', 'o', 'for', 'most', 'had', 'until', 'are', \"couldn't\", \"you'll\", 'hasn', 'who', 'these', 'has', 't', 'didn', 'won', 'do', 'very', 'about', 'mightn', 'how', 'other', \"mustn't\", 'd', 'by', 'when', 'now', 've', 'after', \"haven't\", 'it', \"it's\", 'their', 'through', 'than', 'this', 's', 're', 'myself', 'whom', 'having', 'the'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = X_train['title'].replace(to_replace=\"r'\\b(?:{})\\b'\" , value=\"\",regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1142    alabama sen sessions backs trump  s immigratio...\n",
+       "2654    as of 600 am november 6th  trump is leading in...\n",
+       "5395    time  investigating hillary is an attack on al...\n",
+       "1170                women should vote with their husbands\n",
+       "4371    pakistan police detain dozens of imran khan s ...\n",
+       "                              ...                        \n",
+       "3772    the inane spectacle of the gop debate  cruz th...\n",
+       "5191    clinton  fbigate and the true depth of the oba...\n",
+       "5226    fearing election day trouble  some us schools ...\n",
+       "5390    obama gets away with some whoppers on guns at ...\n",
+       "860     ceta  canada has challenged the eu  s chemical...\n",
+       "Name: title, Length: 5068, dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
